fix z-index jivosite

--- a/src/assets/less/_important.less
+++ b/src/assets/less/_important.less
@@ -346,7 +346,6 @@ button {
   }
 }
 .globalClass_ET {
-  position: fixed;
   z-index: 998;
 }
 
